--- a/index.html
+++ b/index.html
@@ -38,13 +38,24 @@
 		</div>
 	</header>
 
-
+	<div id="InfoBanner" style="">
+		<span class="reversed reversedRight">
+			<span>
+				&#9888;
+			</span>
+		</span>
+		<span class="reversed reversedLeft">
+			Work in progress currently !!
+		</span>
+	</div>
 	<!-- Main -->
 	<div id="main">
 
 		<!-- One -->
 		<section id="one">
 			<header class="major">
+				<!-- <h1 class="workinprogress"><strong class="underline-on-hover">CURRENTLY IN
+						DEVELOPMENT</strong></h1> -->
 				<h2><strong class="about underline-on-hover">About</strong></h2>
 			</header>
 			<p>Hi!! there,
@@ -65,32 +76,32 @@
 			<h2 class="about underline-on-hover">Work Flow</h2>
 			<div class="row">
 				<article class="col-6 col-12-xsmall work-item">
-					<a href="images/fulls/01.jpg" class="image fit thumb"><img src="images/thumbs/01.jpg" alt="" /></a>
+					<a href="images/fulls/01.png" class="image fit thumb"><img src="images/thumbs/01.png" alt="" /></a>
 					<h3 class="underline-on-hover">Portfolio Made By Me</h3>
-					<p>This is the Portfolio which i made for my self.</p>
+					<p>This is the temporary portfolio edited by me. rn working on custom portfolio. Just Wait :)</p>
 				</article>
-				<article class="col-6 col-12-xsmall work-item">
-					<a href="images/fulls/02.jpg" class="image fit thumb"><img src="images/thumbs/02.jpg" alt="" /></a>
+				<!-- <article class="col-6 col-12-xsmall work-item">
+					<a href="images/fulls/02.png" class="image fit thumb"><img src="images/thumbs/02.png" alt="" /></a>
 					<h3 class="underline-on-hover">Initial Page</h3>
 					<p>This is how Initializaion look like.</p>
 				</article>
 				<article class="col-6 col-12-xsmall work-item">
-					<a href="images/fulls/03.jpg" class="image fit thumb"><img src="images/thumbs/03.jpg" alt="" /></a>
+					<a href="images/fulls/03.png " class="image fit thumb"><img src="images/thumbs/03.png" alt="" /></a>
 					<h3 class="underline-on-hover">Home Page</h3>
 					<p>Home Page visuals.</p>
+				</article> -->
+				<article class="col-6 col-12-xsmall work-item">
+					<a href="images/fulls/04.webp" class="image fit thumb"><img src="images/thumbs/04.png" alt="" /></a>
+					<h3 class="underline-on-hover">Recent Favourite Show</h3>
+					<p>Legacies my fav show and character.</p>
 				</article>
 				<article class="col-6 col-12-xsmall work-item">
-					<a href="images/fulls/04.jpg" class="image fit thumb"><img src="images/thumbs/04.jpg" alt="" /></a>
-					<h3 class="underline-on-hover">Some Art Work By Me</h3>
-					<p>Some Art Work made by me when i was in High School.</p>
-				</article>
-				<article class="col-6 col-12-xsmall work-item">
-					<a href="images/fulls/05.jpg" class="image fit thumb"><img src="images/thumbs/05.jpg" alt="" /></a>
+					<a href="images/fulls/05.png" class="image fit thumb"><img src="images/thumbs/05.png" alt="" /></a>
 					<h3 class="underline-on-hover">Gamer by passion</h3>
 					<p>I started playing game since i was in elementary school.</p>
 				</article>
 				<article class="col-6 col-12-xsmall work-item">
-					<a href="images/fulls/06.jpg" class="image fit thumb"><img src="images/thumbs/06.jpg" alt="" /></a>
+					<a href="images/fulls/06.jpg" class="image fit thumb"><img src="images/thumbs/06.png" alt="" /></a>
 					<h3 class="underline-on-hover">Mobile Games</h3>
 					<p>started playing games on mobile cuz my pc suck at running high end
 						graphics games :)</p>
@@ -128,10 +139,12 @@
 						</li>
 						<li>
 							<h3 class="icon solid fa-mobile-alt"><span class="label">Phone</span></h3>
-							000-000-0000
+
+							<a href="tel:000-000-0000" class="button-underline underline-on-hover">000-000-0000</a>
 						</li>
 						<li>
 							<h3 class="icon solid fa-envelope"><span class="label">Email</span></h3>
+
 							<a href="mailto:amit4.gujarat@gmail.com"
 								class="button-underline underline-on-hover">amit4.gujarat@gmail.com</a>
 						</li>
@@ -172,6 +185,7 @@
 			</ul>
 		</div>
 	</footer>
+
 
 	<!-- Scripts -->
 	<script src="assets/js/jquery.min.js"></script>
