--- a/index.html
+++ b/index.html
@@ -33,12 +33,11 @@
 				gypsy and its important for the world that i tell the stories of the many people i encounter on
 				my journeys.
 				<br /> That's what i am doing..
-				<a href="#"></a>
 			</h1>
 		</div>
 	</header>
 
-	<div id="InfoBanner" style="">
+	<div id="InfoBanner">
 		<span class="reversed reversedRight">
 			<span>
 				&#9888;
@@ -177,9 +176,9 @@
 								class="uil uil-envelope" style="font-size: 1.75em;"></i></span></a></li> -->
 			</ul>
 			<ul class="copyright">
-				<li>&copy; CLOUDZY</li>
+				<li class="cloudzy">&copy; CLOUDZY</li>
 				<li><a href="https://allmylinks.com/cloudzy" target=”_blank”
-						class="icon underline-on-hover">ALLMYLINKS</a>
+						class="icon links underline-on-hover">ALLMYLINKS</a>
 					<!-- <span><i class="uil uil-window"></i></span> -->
 				</li>
 			</ul>
