--- a/index.html
+++ b/index.html
@@ -130,7 +130,7 @@
 				</div>
 				<div class="col-4 col-12-small">
 					<ul class="labeled-icons">
-						<li>
+						<li style="padding-left: 40px;">
 							<h3 class="icon solid fa-home"><span class="label">Address</span></h3>
 							901 S.G Highway.<br />
 							Ahmdabad, GJ 380052<br />
