--- a/index.html
+++ b/index.html
@@ -28,10 +28,12 @@
 	<header id="header">
 		<div class="inner">
 			<a href="index.html" class="image avatar"><img src="images/avatar.jpg" alt="error loading image" /></a>
-			<h1><strong>Hey, My Name is Amit. <br /></strong>I am a programmer. I live in Gujarat. <br /> but i call
-				many places home. <br /> A palm reader in India once told me <br /> i will live the life of a magical
-				gypsy and its important for the world that i tell the stories of the many people i encounter on
-				my journeys.
+			<h1><strong>Hey, My Name is Amit. <br /></strong>
+				I am a programmer. I live in Gujarat. <br />
+				but i call many places home. <br />
+				A palm reader in India once told me <br />
+				i will live the life of a magical gypsy and its important for the world that i tell the stories of the
+				many people i encounter on my journeys.
 				<br /> That's what i am doing..
 			</h1>
 		</div>
@@ -59,7 +61,8 @@
 			</header>
 			<p>Hi!! there,
 				I am "Amit Kumar Rossi"<i> a.k.a.</i> Cloudzy. I am a Student and a Developer with an effective
-				problem solving mindset passionated for programming, Gaming and technology. Also Growing my skills on
+				problem solving mindset passionated for programming, Gaming and about technology. Also Growing my skills
+				on
 				many other platforms like MySQL, SQL, Java, VsCode, Html, Css,
 				Python, C++, Github etc. Also growing my skills on Web Development..
 			</p>
@@ -76,7 +79,7 @@
 			<div class="row">
 				<article class="col-6 col-12-xsmall work-item">
 					<a href="images/fulls/01.png" class="image fit thumb"><img src="images/thumbs/01.png" alt="" /></a>
-					<h3 class="underline-on-hover">Portfolio Made By Me</h3>
+					<h3 class="about-content underline-on-hover">Portfolio Made By Me</h3>
 					<p>This is the temporary portfolio edited by me. rn working on custom portfolio. Just Wait :)</p>
 				</article>
 				<!-- <article class="col-6 col-12-xsmall work-item">
@@ -91,17 +94,17 @@
 				</article> -->
 				<article class="col-6 col-12-xsmall work-item">
 					<a href="images/fulls/04.webp" class="image fit thumb"><img src="images/thumbs/04.png" alt="" /></a>
-					<h3 class="underline-on-hover">Recent Favourite Show</h3>
+					<h3 class="about-content underline-on-hover">Recent Favourite Show</h3>
 					<p>Legacies my fav show and character.</p>
 				</article>
 				<article class="col-6 col-12-xsmall work-item">
 					<a href="images/fulls/05.png" class="image fit thumb"><img src="images/thumbs/05.png" alt="" /></a>
-					<h3 class="underline-on-hover">Gamer by passion</h3>
+					<h3 class="about-content underline-on-hover">Gamer by passion</h3>
 					<p>I started playing game since i was in elementary school.</p>
 				</article>
 				<article class="col-6 col-12-xsmall work-item">
 					<a href="images/fulls/06.jpg" class="image fit thumb"><img src="images/thumbs/06.png" alt="" /></a>
-					<h3 class="underline-on-hover">Mobile Games</h3>
+					<h3 class="about-content underline-on-hover">Mobile Games</h3>
 					<p>started playing games on mobile cuz my pc suck at running high end
 						graphics games :)</p>
 				</article>
