--- a/index.html
+++ b/index.html
@@ -142,13 +142,14 @@
 						<li>
 							<h3 class="icon solid fa-mobile-alt"><span class="label">Phone</span></h3>
 
-							<a href="tel:000-000-0000" class="button-underline underline-on-hover">000-000-0000</a>
+							<a href="tel:000-000-0000" class="button-underline underline-on-hover"
+								style="display: inline;">000-000-0000</a>
 						</li>
 						<li>
 							<h3 class="icon solid fa-envelope"><span class="label">Email</span></h3>
 
-							<a href="mailto:amit4.gujarat@gmail.com"
-								class="button-underline underline-on-hover">amit4.gujarat@gmail.com</a>
+							<a href="mailto:amit4.gujarat@gmail.com" class="button-underline underline-on-hover"
+								style="display: inline;">amit4.gujarat@gmail.com</a>
 						</li>
 					</ul>
 				</div>
