--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
 			<div class="row">
 				<article class="col-6 col-12-xsmall work-item">
 					<a href="images/fulls/01.png" class="image fit thumb"><img src="images/thumbs/01.png" alt="" /></a>
-					<h3 class="about-content underline-on-hover">Portfolio Made By Me</h3>
+					<h3 class="about-content underline-on-hover">Portfolio</h3>
 					<p>This is the temporary portfolio edited by me. rn working on custom portfolio. Just Wait :)</p>
 				</article>
 				<!-- <article class="col-6 col-12-xsmall work-item">
@@ -100,12 +100,12 @@
 				<article class="col-6 col-12-xsmall work-item">
 					<a href="images/fulls/05.png" class="image fit thumb"><img src="images/thumbs/05.png" alt="" /></a>
 					<h3 class="about-content underline-on-hover">Gamer by passion</h3>
-					<p>I started playing game since i was in elementary school.</p>
+					<p>I started playing game on pc since i was in elementary school.</p>
 				</article>
 				<article class="col-6 col-12-xsmall work-item">
 					<a href="images/fulls/06.jpg" class="image fit thumb"><img src="images/thumbs/06.png" alt="" /></a>
 					<h3 class="about-content underline-on-hover">Mobile Games</h3>
-					<p>started playing games on mobile cuz my pc suck at running high end
+					<p>I started playing games on mobile cuz my pc suck at running high end
 						graphics games :)</p>
 				</article>
 			</div>
@@ -176,8 +176,8 @@
 				<li><a href="https://discord.com/invite/hMU7tNS" target=”_blank” class="icon"><span><i
 								class="uil uil-discord" style="font-size: 1.75em;"></i></span></a></li>
 
-				<!-- <li><a href="mailto:amit4.gujarat@gmail.com" target=”_blank” class="icon"><span><i
-								class="uil uil-envelope" style="font-size: 1.75em;"></i></span></a></li> -->
+				<li><a href="https://bio.site/cloudzy" target=”_blank” class="icon"><span><i class="uil uil-award"
+								style="font-size: 1.75em;"></i></span></a></li>
 			</ul>
 			<ul class="copyright">
 				<li class="cloudzy">&copy; CLOUDZY</li>
