--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
 			</span>
 		</span>
 		<span class="reversed reversedLeft">
-			Work in progress currently !!
+			Development in Progress !!
 		</span>
 	</div>
 	<!-- Main -->
