--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
 		</div>
 	</header>
 
-	<div id="InfoBanner">
+	<!-- <div id="InfoBanner">
 		<span class="reversed reversedRight">
 			<span>
 				&#9888;
@@ -48,7 +48,7 @@
 		<span class="reversed reversedLeft">
 			Development in Progress !!
 		</span>
-	</div>
+	</div> -->
 	<!-- Main -->
 	<div id="main">
 
