--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 	<!-- Header -->
 	<header id="header">
 		<div class="inner">
-			<a href="index.html" class="image avatar"><img src="images/avatar.jpg" alt="error loading image" /></a>
+			<a href="index.html" class="image avatar"><img src="images/avatar.jpg" alt="error loading image" /> </a>
 			<h1><strong>Hey, My Name is Amit. <br /></strong>
 				I am a programmer. I live in Gujarat. <br />
 				but i call many places home. <br />
@@ -165,24 +165,24 @@
 	<footer id="footer">
 		<div class="inner">
 			<ul class="icons">
-				<li><a href="https://twitter.com/CloudzyOP" target=”_blank” class="icon"><span><i
+				<li><a href="https://twitter.com/CloudzyOP" target="_blank" class="icon"><span><i
 								class="uil uil-twitter" style="font-size: 1.75em;"></i></span></a></li>
 
-				<li><a href="https://www.instagram.com/_amiiitt/" target=”_blank” class="icon"><span><i
+				<li><a href="https://www.instagram.com/_amiiitt/" target="_blank" class="icon"><span><i
 								class="uil uil-instagram" style="font-size: 1.75em;"></i></span></a></li>
 
-				<li><a href="https://github.com/Cloudzyyyyy" target=”_blank” class="icon"><span><i
+				<li><a href="https://github.com/Cloudzyyyyy" target="_blank" class="icon"><span><i
 								class="uil uil-github" style="font-size: 1.75em;"></i></span></a></li>
 
-				<li><a href="https://discord.com/invite/hMU7tNS" target=”_blank” class="icon"><span><i
+				<li><a href="https://discord.com/invite/hMU7tNS" target="_blank" class="icon"><span><i
 								class="uil uil-discord" style="font-size: 1.75em;"></i></span></a></li>
 
-				<li><a href="https://bio.site/cloudzy" target=”_blank” class="icon"><span><i class="uil uil-award"
+				<li><a href="https://bio.site/cloudzy" target="_blank" class="icon"><span><i class="uil uil-award"
 								style="font-size: 1.75em;"></i></span></a></li>
 			</ul>
 			<ul class="copyright">
 				<li class="cloudzy">&copy; CLOUDZY</li>
-				<li><a href="https://allmylinks.com/cloudzy" target=”_blank”
+				<li><a href="https://allmylinks.com/cloudzy" target="_blank"
 						class="icon links underline-on-hover">ALLMYLINKS</a>
 					<!-- <span><i class="uil uil-window"></i></span> -->
 				</li>
