--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
 				problem solving mindset passionated for programming, Gaming and about technology. Also Growing my skills
 				on
 				many other platforms like MySQL, SQL, Java, VsCode, Html, Css,
-				Python, C++, Github etc. Also growing my skills on Web Development..
+				Python, C++, Github, Web Development etc. I've Developed some Discord Server and personal Discord Bots..
 			</p>
 			<ul class="actions">
 				<li><a href="https://cloudzyyyyy.github.io/Portfolio" target="_blank"
