--- a/index.html
+++ b/index.html
@@ -137,7 +137,7 @@
 						<li style="padding-left: 40px;">
 							<h3 class="icon solid fa-home"><span class="label">Address</span></h3>
 							901 S.G Highway.<br />
-							Ahmdabad, GJ 380052<br />
+							Ahmedabad, GJ 380041<br />
 							India
 						</li>
 						<!-- <li>
