--- a/index.html
+++ b/index.html
@@ -165,10 +165,10 @@
 	<footer id="footer">
 		<div class="inner">
 			<ul class="icons">
-				<li><a href="https://twitter.com/CloudzyOP" target="_blank" class="icon"><span><i
+				<li><a href="https://twitter.com/deiggxd" target="_blank" class="icon"><span><i
 								class="uil uil-twitter" style="font-size: 1.75em;"></i></span></a></li>
 
-				<li><a href="https://www.instagram.com/_amiiitt/" target="_blank" class="icon"><span><i
+				<li><a href="https://www.instagram.com/amittxd/" target="_blank" class="icon"><span><i
 								class="uil uil-instagram" style="font-size: 1.75em;"></i></span></a></li>
 
 				<li><a href="https://github.com/Cloudzyyyyy" target="_blank" class="icon"><span><i
