--- a/index.html
+++ b/index.html
@@ -168,7 +168,7 @@
 				<li><a href="https://twitter.com/deiggxd" target="_blank" class="icon"><span><i
 								class="uil uil-twitter" style="font-size: 1.75em;"></i></span></a></li>
 
-				<li><a href="https://www.instagram.com/_cloudzyy/" target="_blank" class="icon"><span><i
+				<li><a href="https://www.instagram.com/kill.thecrowd/" target="_blank" class="icon"><span><i
 								class="uil uil-instagram" style="font-size: 1.75em;"></i></span></a></li>
 
 				<li><a href="https://github.com/Cloudzyyyyy" target="_blank" class="icon"><span><i
